# wikipedia2vec

./: .flake8  .gitignore  404.html  LICENSE  MANIFEST.in  README.md  README.rst  _config.yml  circle.yml  cythonize.sh  index.html  mkdocs.yml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.circleci/: config.yml
.github/workflows/: deploy.yml  test.yml
commands/: index.html
css/: extra.css
custom_theme/: nav.html
data/: DE-GOOGLE.txt  ES-GOOGLE.txt  WikiSim-353.txt  chinese_analogy.txt  portuguse_analogy.txt
docs/: benchmarks.md  commands.md  features.md  index.md  install.md  intro.md  pretrained.md  usage.md
docs/css/: extra.css
entity_vector/: __init__.py  dictionary.pxd  dictionary.pyx  entity_vector.py  entity_vector_worker.pyx  wiki_dump_reader.py  wiki_page.pxd  wiki_page.pyx
install/: index.html
intro/: index.html
paper/: paper.bib  paper.md
pretrained/: index.html
scripts/: create_projector_data.py  gensim_wikipedia.py  intrinsic_eval.py
search/: search_index.json
tests/: __init__.py  test_dictionary.py  test_dump_db.py  test_extractor.py  test_link_graph.py  test_mention_db.py  test_phrase.py  test_wiki_dump_reader.py  test_wiki_page.py  test_wikipedia2vec.py
usage/: index.html
wikipedia2vec/: __init__.py  cli.py  click_graph.pxd  click_graph.pyx  dictionary.pxd  dictionary.py  dictionary.pyx  dump_db.pxd  dump_db.py  dump_db.pyx  extractor.pxd  extractor.pyx  link_graph.pxd  link_graph.py  link_graph.pyx  mention_db.pxd  mention_db.py  mention_db.pyx  phrase.pxd  phrase.pyx  wikipedia2vec.py  wikipedia2vec.pyx
(+69 files in other folders)
