[metadata]
name = wikipedia2vec
version = 1.0.5
author = Studio Ousia
author_email = ikuya@ousia.jp
description = A tool for learning vector representations of words and entities from Wikipedia
keywords = wikipedia, embedding, wikipedia2vec
url = http://wikipedia2vec.github.io/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = false
packages = find:
setup_requires = numpy
install_requires =
    click
    jieba
    joblib
    lmdb
    marisa-trie
    mwparserfromhell
    numpy
    scipy
    tqdm
include_package_data = True
python_requires = >=3.7
test_suite = tests

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts = wikipedia2vec=wikipedia2vec.cli:cli
